--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim-elixir"]
 	path = vim-elixir
 	url = https://github.com/elixir-editors/vim-elixir.git
+[submodule "neovim-fuzzy"]
+	path = neovim-fuzzy
+	url = https://github.com/cloudhead/neovim-fuzzy.git
