--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "neovim-fuzzy"]
 	path = neovim-fuzzy
 	url = https://github.com/cloudhead/neovim-fuzzy.git
+[submodule "base16-vim"]
+	path = base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
